hello-nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-nginx
spec:
  containers:
  - image: purplepip/hello-nginx
    name: hello-nginx
    ports:
    - containerPort: 80
