hello-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-nginx-pod
spec:
  containers:
  - image: purplepip/hello
    name: hello-nginx-ctr
    ports:
    - containerPort: 80
