hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-nginx
  name: hello-nginx
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: hello-nginx
  type: LoadBalancer
